Updated Scrollbars for main css. (Fixes other themes)

--- a/res/default.css
+++ b/res/default.css
@@ -86,6 +86,7 @@ body {
 }
 
 div#gameLog {
+    overflow-y: auto !important;
 }
 
 #footerLinks {
